# github-action-test

./: .gitignore  LICENSE  README.md  docker-compose.yml  htp_analyzer.py
.github/workflows/: build-push.yaml  ci.yml  front-build-push.yaml
app/: .dockerignore  .gitignore  Dockerfile  README.md  api.py  config.py  database.py  dependencies.py  main.py  pyproject.toml  requirements.txt
app/models/: house_func.py  house_model.py  person_func.py  person_model.py  tree_func.py  tree_model.py
database/: csv_to_sql.py  json_to_csv.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Drawing.tsx  Home.tsx  Result.tsx  Selection.tsx
frontend/src/services/: api.ts
frontend/src/styles/pages/: drawing.css  selection.css
re_flex/: .gitignore  README.md  main.py
re_flex/components/: container.py  inputs.py  options_ui.py  sections.py
re_flex/pages/: index.py
re_flex/style/: colors.py  components.py  layout.py  spacing.py  typography.py
tools/: house_func.py  htp_analyzer_ollama.py  person_func.py  tree_func.py  vis_train.py
yolov8/: data.yaml  inference.py  name.py  train.py
